--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html>
-	<head>
-		<title>CMU CREATE Lab Visualizations</title>
+  <head>
+    <title>CMU CREATE Lab Visualizations</title>
     <link href="css/main.css" media="screen" rel="stylesheet" type="text/css"/>
-	</head>
-	<body>
+  </head>
+  <body>
     <div id="header">
-      <div class="create-lab-font">CMU <span class="title-text">CREATE Lab</span> <span class="subtitle-text">Visualizations</span></div>
-      <p>The Community Robotics, Education and Technology Empowerment Lab (<a href="http://www.cmucreatelab.org/">CREATE Lab</a>) explores socially meaningful innovation and deployment of robotic technologies. We specifically aim to empower a technologically fluent generation and empower everyday citizens and scientists.</p>
+      <div class="create-lab-font">CMU <span class="title-text">CREATE Lab</span>
+        <span class="subtitle-text">Visualizations</span></div>
+      <p>The Community Robotics, Education and Technology Empowerment Lab (<a href="http://www.cmucreatelab.org/">CREATE Lab</a>) explores socially meaningful innovation and deployment of robotic technologies. We specifically aim to empower a technologically fluent generation and empower everyday citizens and scientists.
+      </p>
     </div>
     <div id="body">
       <div>
@@ -24,7 +26,7 @@
         <a href=""><img src="img/suburban-sprawl@2x.png" width="225"></a>
         <a href="">Suburban Sprawl</a>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</p>
-      </div> 
+      </div>
       <div>
         <a href=""><img src="img/airnow@2x.png" width="225"></a>
         <a href="">AirNow</a>
@@ -49,13 +51,13 @@
         <a href=""><img src="img/viirs@2x.png" width="225"></a>
         <a href="">VIIRS</a>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</p>
-      </div> 
+      </div>
     </div>
     <div id="footer" class="create-lab-font">
-      <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;| 
+      <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
       <a href="http://www.cmu.edu">Carnegie Mellon University</a>&nbsp;|
       <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;|
       <a href="tel:+14122686723">412-268-6723</a>
     </div>
-	</body>
+  </body>
 </html>
