--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <div id="header">
-      <div class="create-lab-font">CMU <span class="title-text">CREATE Lab</span>
+      <div class="create-lab-font">
+        <span class="title-text">CREATE Lab</span><br>
         <span class="subtitle-text">Visualizations</span></div>
       <p>The Community Robotics, Education and Technology Empowerment Lab (<a href="http://www.cmucreatelab.org/">CREATE Lab</a>) explores socially meaningful innovation and deployment of robotic technologies. We specifically aim to empower a technologically fluent generation and empower everyday citizens and scientists.
       </p>
