Fix footer to the bottom of the page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="css/main.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
+    <div id="container">
     <div id="header">
       <div class="create-lab-font">
         <span class="title-text">CREATE Lab</span><br>
@@ -52,13 +53,14 @@
         <a href=""><img src="img/viirs@2x.png" width="225"></a>
         <a href="">VIIRS</a>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</p>
-      </div>
+      </div>      
     </div>
     <div id="footer" class="create-lab-font">
       <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
       <a href="http://www.cmu.edu">Carnegie Mellon University</a>&nbsp;|
       <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;|
       <a href="tel:+14122686723">412-268-6723</a>
+    </div>
     </div>
   </body>
 </html>
