--- a/index.html
+++ b/index.html
@@ -5,55 +5,100 @@
     <link href="css/main.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <div id="container">
+    <div id="container" style="min-width: 921px; max-width: 921px; text-align: center">
       <div id="header">
-        <div class="create-lab-font">
-          <span class="title-text">CREATE Lab</span><br>
-          <span class="subtitle-text">Visualizations</span></div>
-        <p>The Community Robotics, Education and Technology Empowerment Lab (<a href="http://www.cmucreatelab.org/">CREATE Lab</a>) explores socially meaningful innovation and deployment of robotic technologies. We specifically aim to empower a technologically fluent generation and empower everyday citizens and scientists.
-        </p>
+        <div id="header-titles">
+          <a href="http://www.cmu.edu/">
+            <div id="cmu-logo-detail-page"></div>
+          </a>
+          <div class="create-lab-font">
+            <a href="./">
+              <div class="title-text">CREATE Lab</div>
+              <div class="subtitle-text">Visualizations</div>
+            </a>
+          </div>
+        </div>
+        <div id="site-description">
+          The Community Robotics, Education and Technology Empowerment Lab
+          (<a href="http://www.cmucreatelab.org/">CREATE Lab</a>)<br>
+          explores socially meaningful innovation and deployment of robotic technologies. We specifically<br>
+          aim to empower a technologically fluent generation and empower everyday citizens and scientists.
+        </div>
       </div>
       <div id="body">
-        <div>
-          <a href=""><img src="img/speck12x12@2x.png" width="225"></a>
-          <a href="">Speck air quality test</a>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</p>
+        <div class="thumbnail">
+          <a href="template.html">
+            <div>
+              <img class="thumbnail-image" src="img/speck12x12@2x.png" width="225">
+              <div class="thumbnail-title">Speck Air Quality Test</div>
+              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+            </div>
+          </a>
         </div>
-        <div>
-          <a href=""><img src="img/firms-lance-modis@2x.png" width="225"></a>
-          <a href="">FIRMS Timelapse</a>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</p>
+        <div class="thumbnail">
+          <a href="template.html">
+            <div>
+              <img class="thumbnail-image" src="img/firms-lance-modis@2x.png" width="225">
+              <div class="thumbnail-title">FIRMS Timelapse</div>
+              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+            </div>
+          </a>
         </div>
-        <div>
-          <a href=""><img src="img/suburban-sprawl@2x.png" width="225"></a>
-          <a href="">Suburban Sprawl</a>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</p>
+        <div class="thumbnail">
+          <a href="template.html">
+            <div>
+              <img class="thumbnail-image" src="img/suburban-sprawl@2x.png" width="225">
+              <div class="thumbnail-title">Suburban Sprawl</div>
+              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+            </div>
+          </a>
         </div>
-        <div>
-          <a href=""><img src="img/airnow@2x.png" width="225"></a>
-          <a href="">AirNow</a>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</p>
+        <div class="thumbnail">
+          <a href="template.html">
+            <div>
+              <img class="thumbnail-image" src="img/airnow@2x.png" width="225">
+              <div class="thumbnail-title">AirNow</div>
+              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+            </div>
+          </a>
         </div>
-        <div>
-          <a href=""><img src="img/drilling@2x.png" width="225"></a>
-          <a href="">Drilling</a>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</p>
+
+        <div class="thumbnail">
+          <a href="template.html">
+            <div>
+              <img class="thumbnail-image" src="img/drilling@2x.png" width="225">
+              <div class="thumbnail-title">Drilling</div>
+              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+            </div>
+          </a>
         </div>
-        <div>
-          <a href=""><img src="img/earthquakes@2x.png" width="225"></a>
-          <a href="">EarthQuakes</a>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</p>
+        <div class="thumbnail">
+          <a href="template.html">
+            <div>
+              <img class="thumbnail-image" src="img/earthquakes@2x.png" width="225">
+              <div class="thumbnail-title">EarthQuakes</div>
+              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+            </div>
+          </a>
         </div>
-        <div>
-          <a href=""><img src="img/lehd@2x.png" width="225"></a>
-          <a href="">LEHD</a>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</p>
+        <div class="thumbnail">
+          <a href="template.html">
+            <div>
+              <img class="thumbnail-image" src="img/lehd@2x.png" width="225">
+              <div class="thumbnail-title">LEHD</div>
+              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+            </div>
+          </a>
         </div>
-        <div>
-          <a href=""><img src="img/viirs@2x.png" width="225"></a>
-          <a href="">VIIRS</a>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</p>
-        </div>      
+        <div class="thumbnail">
+          <a href="template.html">
+            <div>
+              <img class="thumbnail-image" src="img/viirs@2x.png" width="225">
+              <div class="thumbnail-title">VIIRS</div>
+              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+            </div>
+          </a>
+        </div>
       </div>
       <div id="footer" class="create-lab-font">
         <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
