--- a/template.html
+++ b/template.html
@@ -5,23 +5,27 @@
     <link href="css/main.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <div id="detail-page-header">
-        <div id="cmu-logo-detail-page"></div>
+    <div id="container" style="margin:10px;">
+      <div id="header-titles">
+        <a href="http://www.cmu.edu/">
+          <div id="cmu-logo-detail-page"></div>
+        </a>
         <div class="create-lab-font">
           <a href="./">
-          <span class="title-text">CREATE Lab</span><br>
-          <span class="subtitle-text">Visualizations</span>
+            <div class="title-text">CREATE Lab</div>
+            <div class="subtitle-text">Visualizations</div>
           </a>
         </div>
-    </div>
-    <div id="body">
-      BODY!
-    </div>
-    <div id="footer" class="create-lab-font">
-      <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
-      <a href="http://www.cmu.edu">Carnegie Mellon University</a>&nbsp;|
-      <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;|
-      <a href="tel:+14122686723">412-268-6723</a>
+      </div>
+      <div id="body">
+        Your totally awesome visualization will go here.
+      </div>
+      <div id="footer" class="create-lab-font">
+        <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
+        <a href="http://www.cmu.edu">Carnegie Mellon University</a>&nbsp;|
+        <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;|
+        <a href="tel:+14122686723">412-268-6723</a>
+      </div>
     </div>
   </body>
 </html>
