Replace visualization with explorable

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>CMU CREATE Lab Visualizations</title>
+    <title>CMU CREATE Lab Explorables</title>
     <link href="css/main.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
@@ -14,7 +14,7 @@
           <div class="create-lab-font">
             <a href="./">
               <div class="title-text">CREATE Lab</div>
-              <div class="subtitle-text">Visualizations</div>
+              <div class="subtitle-text">Explorables</div>
             </a>
           </div>
         </div>
