--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>VISUALIZATION TITLE GOES HERE</title>
+    <title>EXPLORABLE TITLE GOES HERE</title>
     <link href="css/main.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
@@ -13,12 +13,12 @@
         <div class="create-lab-font">
           <a href="./">
             <div class="title-text">CREATE Lab</div>
-            <div class="subtitle-text">Visualizations</div>
+            <div class="subtitle-text">Explorables</div>
           </a>
         </div>
       </div>
       <div id="body">
-        Your totally awesome visualization will go here.
+        Your totally awesome explorable will go here.
       </div>
       <div id="footer" class="create-lab-font">
         <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
