Replace boiler plate with real explorable descriptions

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div>
               <img class="thumbnail-image" src="img/speck12x12@2x.png" width="225">
               <div class="thumbnail-title">Speck Air Quality Test</div>
-              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+              <div class="thumbnail-description">Visualization of a Speck test showing how indoor air quality is effected by vacuuming, running an air purifier and blowing out candles.
+              </div>
             </div>
           </a>
         </div>
@@ -40,7 +41,7 @@
             <div>
               <img class="thumbnail-image" src="img/firms-lance-modis@2x.png" width="225">
               <div class="thumbnail-title">FIRMS Timelapse</div>
-              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+              <div class="thumbnail-description">Visualization of thirteen years of MODIS fire location vector data overlayed on explorable global timelapse.</div>
             </div>
           </a>
         </div>
@@ -49,7 +50,7 @@
             <div>
               <img class="thumbnail-image" src="img/suburban-sprawl@2x.png" width="225">
               <div class="thumbnail-title">Suburban Sprawl</div>
-              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+              <div class="thumbnail-description">Video exploring the growth of suburban sprawl in Chesterfield County, Virginia using Timemachine to show the full scope of changes.</div>
             </div>
           </a>
         </div>
@@ -58,7 +59,7 @@
             <div>
               <img class="thumbnail-image" src="img/airnow@2x.png" width="225">
               <div class="thumbnail-title">AirNow</div>
-              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+              <div class="thumbnail-description">Explorable visualization of AirNow data showing changes in particle values and air quality across the United States.</div>
             </div>
           </a>
         </div>
@@ -68,7 +69,8 @@
             <div>
               <img class="thumbnail-image" src="img/drilling@2x.png" width="225">
               <div class="thumbnail-title">Drilling</div>
-              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+              <div class="thumbnail-description">Time series visualization of over 1 million natural resource extraction wells ineight states spanning decades.
+             </div>
             </div>
           </a>
         </div>
@@ -77,7 +79,7 @@
             <div>
               <img class="thumbnail-image" src="img/earthquakes@2x.png" width="225">
               <div class="thumbnail-title">EarthQuakes</div>
-              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+              <div class="thumbnail-description">Visualization of LANDSAT timemachine exploring the possible connection in Arkansas between earthquakes and natural gas drilling.</div>
             </div>
           </a>
         </div>
@@ -85,17 +87,17 @@
           <a href="template.html">
             <div>
               <img class="thumbnail-image" src="img/lehd@2x.png" width="225">
-              <div class="thumbnail-title">LEHD</div>
-              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+              <div class="thumbnail-title">EVA & LEHD</div>
+              <div class="thumbnail-description">Multi-dimensional visualization of LEHD (Longitudinal Employer-Household Dynamics) data using the EVA (Explorable Visual Analytics) tool.</div>
             </div>
           </a>
         </div>
         <div class="thumbnail">
           <a href="template.html">
             <div>
-              <img class="thumbnail-image" src="img/viirs@2x.png" width="225">
-              <div class="thumbnail-title">VIIRS</div>
-              <div class="thumbnail-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec purus in ante pretium blandit. Aliquam erat volutpat. Nulla libero lectus.</div>
+              <img class="thumbnail-image" src="img/yenchia@2x.png" width="225">
+              <div class="thumbnail-title">Timelapse Story Telling</div>
+              <div class="thumbnail-description">Visualization exploring landscape changes along Taiwan's coastline over two decades using Timemachine.</div>
             </div>
           </a>
         </div>
