--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div id="body">
         <div class="thumbnail">
-          <a href="template.html">
+          <a href="explorables/speck-air-quality-test">
             <div>
               <img class="thumbnail-image" src="img/speck12x12@2x.png" width="225">
               <div class="thumbnail-title">Speck Air Quality Test</div>
