Add Madagascar story to FIRMS timelapse explorable

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </a>
         </div>
         <div class="thumbnail">
-          <a href="template.html">
+          <a href="explorables/firms-timelapse">
             <div>
               <img class="thumbnail-image" src="img/firms-lance-modis@2x.png" width="225">
               <div class="thumbnail-title">FIRMS Timelapse</div>
