Adding the Suburban Sprawl explorable

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </a>
         </div>
         <div class="thumbnail">
-          <a href="template.html">
+          <a href="explorables/suburban-sprawl">
             <div>
               <img class="thumbnail-image" src="img/suburban-sprawl@2x.png" width="225">
               <div class="thumbnail-title">Suburban Sprawl</div>
