Adding EVA & LEHD explorable

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </a>
         </div>
         <div class="thumbnail">
-          <a href="template.html">
+          <a href="explorables/eva-and-lehd.html">
             <div>
               <img class="thumbnail-image" src="img/lehd@2x.png" width="225">
               <div class="thumbnail-title">EVA & LEHD</div>
