--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </a>
         </div>
         <div class="thumbnail">
-          <a href="template.html">
+          <a href="http://earthtimelapsestorytelling.blogspot.com/" target="_blank">
             <div>
               <img class="thumbnail-image" src="img/yenchia@2x.png" width="225">
               <div class="thumbnail-title">Timelapse Story Telling</div>
