Adding Fracking Earthquake explorable

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
           </a>
         </div>
         <div class="thumbnail">
-          <a href="template.html">
+          <a href="explorables/fracking-earthquakes">
             <div>
               <img class="thumbnail-image" src="img/earthquakes@2x.png" width="225">
-              <div class="thumbnail-title">EarthQuakes</div>
+              <div class="thumbnail-title">Fracking Earthquakes</div>
               <div class="thumbnail-description">Visualization of LANDSAT timemachine exploring the possible connection in Arkansas between earthquakes and natural gas drilling.</div>
             </div>
           </a>
