Tweaked the UI and fixed several css problems.

--- a/explorables/firms-timelapse.html
+++ b/explorables/firms-timelapse.html
@@ -5,16 +5,20 @@
     <link href="../css/main.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <div id="container" style="margin:10px;">
-      <div id="header-titles">
-        <a href="http://www.cmu.edu/">
-          <div id="cmu-logo-detail-page"></div>
-        </a>
-        <div class="create-lab-font">
-          <a href="../">
-            <div class="title-text">CREATE Lab</div>
-            <div class="subtitle-text">Explorables</div>
-          </a>
+    <div id="container">
+      <div id="header">
+        <div id="header-titles">
+          <div class="cmu-font">
+            <a href="http://www.cmu.edu/">
+              <div id="cmu-logo-detail-page"></div>
+            </a>
+          </div>
+          <div class="create-lab-font">
+            <a href="../">
+              <div class="title-text">CREATE Lab</div>
+              <div class="subtitle-text">Explorables</div>
+            </a>
+          </div>
         </div>
       </div>
       <div id="body">
@@ -24,14 +28,14 @@
         <div id="embed-description">
             <strong>FIRMS Timelapse</strong>
             <p>
-              We visualized 53,087,291 fire events as recorded over almost 13 years by MODIS. This particular story digs into how the visualization can be used to understand more about the use of fire in agricultural practices on Madagascar. 
+              We visualized 53,087,291 fire events as recorded over almost 13 years by MODIS. This particular story digs into how the visualization can be used to understand more about the use of fire in agricultural practices on Madagascar.
             </p>
           <ul>
             <li><a href="http://gabrielo.cmucreatelab.org/firms-lance-modis/timemachine.html" target="_blank">Explore it yourself</a></li>
           </ul>
         </div>
       </div>
-      <div id="footer" class="create-lab-font">
+      <div id="footer">
         <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
         <a href="http://www.cmu.edu">Carnegie Mellon University</a>&nbsp;|
         <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;|
