--- a/explorables/speck-air-quality-test.html
+++ b/explorables/speck-air-quality-test.html
@@ -5,16 +5,20 @@
     <link href="../css/main.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <div id="container" style="margin:10px;">
-      <div id="header-titles">
-        <a href="http://www.cmu.edu/">
-          <div id="cmu-logo-detail-page"></div>
-        </a>
-        <div class="create-lab-font">
-          <a href="../">
-            <div class="title-text">CREATE Lab</div>
-            <div class="subtitle-text">Explorables</div>
-          </a>
+    <div id="container">
+      <div id="header">
+        <div id="header-titles">
+          <div class="cmu-font">
+            <a href="http://www.cmu.edu/">
+              <div id="cmu-logo-detail-page"></div>
+            </a>
+          </div>
+          <div class="create-lab-font">
+            <a href="../">
+              <div class="title-text">CREATE Lab</div>
+              <div class="subtitle-text">Explorables</div>
+            </a>
+          </div>
         </div>
       </div>
       <div id="body">
@@ -24,7 +28,7 @@
         <div id="embed-description">
             <strong>Speck Air Quality Test</strong>
             <p>
-              We arranged 144 Specks in a 12 x 12 grid 
+              We arranged 144 Specks in a 12 x 12 grid
               to test how particles flow through the room. The Specks
               recorded samples once per second. The colored cells on the grid represent the values recorded. We also took periodic
               readings in the corners of the grid with a Hach MET ONE HHPC-6 particle counter--those readings are
@@ -35,7 +39,7 @@
           </ul>
         </div>
       </div>
-      <div id="footer" class="create-lab-font">
+      <div id="footer">
         <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
         <a href="http://www.cmu.edu">Carnegie Mellon University</a>&nbsp;|
         <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;|
