--- a/explorables/suburban-sprawl.html
+++ b/explorables/suburban-sprawl.html
@@ -5,16 +5,20 @@
     <link href="../css/main.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <div id="container" style="margin:10px;">
-      <div id="header-titles">
-        <a href="http://www.cmu.edu/">
-          <div id="cmu-logo-detail-page"></div>
-        </a>
-        <div class="create-lab-font">
-          <a href="../">
-            <div class="title-text">CREATE Lab</div>
-            <div class="subtitle-text">Explorables</div>
-          </a>
+    <div id="container">
+      <div id="header">
+        <div id="header-titles">
+          <div class="cmu-font">
+            <a href="http://www.cmu.edu/">
+              <div id="cmu-logo-detail-page"></div>
+            </a>
+          </div>
+          <div class="create-lab-font">
+            <a href="../">
+              <div class="title-text">CREATE Lab</div>
+              <div class="subtitle-text">Explorables</div>
+            </a>
+          </div>
         </div>
       </div>
       <div id="body">
@@ -28,7 +32,7 @@
             </p>
         </div>
       </div>
-      <div id="footer" class="create-lab-font">
+      <div id="footer">
         <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
         <a href="http://www.cmu.edu">Carnegie Mellon University</a>&nbsp;|
         <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;|
