--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <link href="css/main.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <div id="container" style="min-width: 921px; max-width: 921px; text-align: center">
+    <div id="container">
       <div id="header">
         <div id="header-titles">
-          <a href="http://www.cmu.edu/">
-            <div id="cmu-logo-detail-page"></div>
-          </a>
+          <div class="cmu-font">
+            <a href="http://www.cmu.edu/">
+              <div id="cmu-logo-detail-page"></div>
+            </a>
+          </div>
           <div class="create-lab-font">
             <a href="./">
               <div class="title-text">CREATE Lab</div>
@@ -18,91 +20,96 @@
             </a>
           </div>
         </div>
-        <div id="site-description">
+        <p id="site-description">
           The Community Robotics, Education and Technology Empowerment Lab
           (<a href="http://www.cmucreatelab.org/">CREATE Lab</a>)<br>
           explores socially meaningful innovation and deployment of robotic technologies. We specifically<br>
           aim to empower a technologically fluent generation and empower everyday citizens and scientists.
-        </div>
+        </p>
       </div>
       <div id="body">
-        <div class="thumbnail">
-          <a href="explorables/speck-air-quality-test">
-            <div>
-              <img class="thumbnail-image" src="img/speck12x12@2x.png" width="225">
-              <div class="thumbnail-title">Speck Air Quality Test</div>
-              <div class="thumbnail-description">Visualization of a Speck test showing how indoor air quality is effected by vacuuming, running an air purifier and blowing out candles.
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="thumbnail">
-          <a href="explorables/firms-timelapse">
-            <div>
-              <img class="thumbnail-image" src="img/firms-lance-modis@2x.png" width="225">
-              <div class="thumbnail-title">FIRMS Timelapse</div>
-              <div class="thumbnail-description">Visualization of thirteen years of MODIS fire location vector data overlayed on explorable global timelapse.</div>
-            </div>
-          </a>
-        </div>
-        <div class="thumbnail">
-          <a href="explorables/suburban-sprawl">
-            <div>
-              <img class="thumbnail-image" src="img/suburban-sprawl@2x.png" width="225">
-              <div class="thumbnail-title">Suburban Sprawl</div>
-              <div class="thumbnail-description">Video exploring the growth of suburban sprawl in Chesterfield County, Virginia using Timemachine to show the full scope of changes.</div>
-            </div>
-          </a>
-        </div>
-        <div class="thumbnail">
-          <a href="template.html">
-            <div>
-              <img class="thumbnail-image" src="img/airnow@2x.png" width="225">
-              <div class="thumbnail-title">AirNow</div>
-              <div class="thumbnail-description">Explorable visualization of AirNow data showing changes in particle values and air quality across the United States.</div>
-            </div>
-          </a>
-        </div>
-
-        <div class="thumbnail">
-          <a href="template.html">
-            <div>
-              <img class="thumbnail-image" src="img/drilling@2x.png" width="225">
-              <div class="thumbnail-title">Drilling</div>
-              <div class="thumbnail-description">Time series visualization of over 1 million natural resource extraction wells ineight states spanning decades.
-             </div>
-            </div>
-          </a>
-        </div>
-        <div class="thumbnail">
-          <a href="explorables/fracking-earthquakes">
-            <div>
-              <img class="thumbnail-image" src="img/earthquakes@2x.png" width="225">
-              <div class="thumbnail-title">Fracking Earthquakes</div>
-              <div class="thumbnail-description">Visualization of LANDSAT timemachine exploring the possible connection in Arkansas between earthquakes and natural gas drilling.</div>
-            </div>
-          </a>
-        </div>
-        <div class="thumbnail">
-          <a href="explorables/eva-and-lehd.html">
-            <div>
-              <img class="thumbnail-image" src="img/lehd@2x.png" width="225">
-              <div class="thumbnail-title">EVA & LEHD</div>
-              <div class="thumbnail-description">Multi-dimensional visualization of LEHD (Longitudinal Employer-Household Dynamics) data using the EVA (Explorable Visual Analytics) tool.</div>
-            </div>
-          </a>
-        </div>
-        <div class="thumbnail">
-          <a href="http://earthtimelapsestorytelling.blogspot.com/" target="_blank">
-            <div>
-              <img class="thumbnail-image" src="img/yenchia@2x.png" width="225">
-              <div class="thumbnail-title">Timelapse Story Telling</div>
-              <div class="thumbnail-description">Visualization exploring landscape changes along Taiwan's coastline over two decades using Timemachine.</div>
-            </div>
-          </a>
-        </div>
+        <table>
+          <tr>
+            <td class="thumbnail">
+              <a href="explorables/speck-air-quality-test.html">
+                <div>
+                  <img class="thumbnail-image" src="img/speck12x12@2x.png" width="225">
+                  <div class="thumbnail-title">Speck Air Quality Test</div>
+                  <div class="thumbnail-description">Visualization of a Speck test showing how indoor air quality is effected by vacuuming, running an air purifier and blowing out candles.
+                  </div>
+                </div>
+              </a>
+            </td>
+            <td class="thumbnail">
+              <a href="explorables/firms-timelapse.html">
+                <div>
+                  <img class="thumbnail-image" src="img/firms-lance-modis@2x.png" width="225">
+                  <div class="thumbnail-title">FIRMS Timelapse</div>
+                  <div class="thumbnail-description">Visualization of thirteen years of MODIS fire location vector data overlayed on explorable global timelapse.</div>
+                </div>
+              </a>
+            </td>
+            <td class="thumbnail">
+              <a href="explorables/suburban-sprawl.html">
+                <div>
+                  <img class="thumbnail-image" src="img/suburban-sprawl@2x.png" width="225">
+                  <div class="thumbnail-title">Suburban Sprawl</div>
+                  <div class="thumbnail-description">Video exploring the growth of suburban sprawl in Chesterfield County, Virginia using Timemachine to show the full scope of changes.</div>
+                </div>
+              </a>
+            </td>
+            <td class="thumbnail">
+              <a href="template.html">
+                <div>
+                  <img class="thumbnail-image" src="img/airnow@2x.png" width="225">
+                  <div class="thumbnail-title">AirNow</div>
+                  <div class="thumbnail-description">Explorable visualization of AirNow data showing changes in particle values and air quality across the United States.</div>
+                </div>
+              </a>
+            </td>
+          </tr>
+          <tr>
+            <td class="thumbnail">
+              <a href="template.html">
+                <div>
+                  <img class="thumbnail-image" src="img/drilling@2x.png" width="225">
+                  <div class="thumbnail-title">Drilling</div>
+                  <div class="thumbnail-description">Time series visualization of over 1 million natural resource extraction wells ineight states spanning decades.
+                 </div>
+                </div>
+              </a>
+            </td>
+            <td class="thumbnail">
+              <a href="explorables/fracking-earthquakes.html">
+                <div>
+                  <img class="thumbnail-image" src="img/earthquakes@2x.png" width="225">
+                  <div class="thumbnail-title">Fracking Earthquakes</div>
+                  <div class="thumbnail-description">Visualization of LANDSAT timemachine exploring the possible connection in Arkansas between earthquakes and natural gas drilling.</div>
+                </div>
+              </a>
+            </td>
+            <td class="thumbnail">
+              <a href="explorables/eva-and-lehd.html">
+                <div>
+                  <img class="thumbnail-image" src="img/lehd@2x.png" width="225">
+                  <div class="thumbnail-title">EVA & LEHD</div>
+                  <div class="thumbnail-description">Multi-dimensional visualization of LEHD (Longitudinal Employer-Household Dynamics) data using the EVA (Explorable Visual Analytics) tool.</div>
+                </div>
+              </a>
+            </td>
+            <td class="thumbnail">
+              <a href="http://earthtimelapsestorytelling.blogspot.com/" target="_blank">
+                <div>
+                  <img class="thumbnail-image" src="img/yenchia@2x.png" width="225">
+                  <div class="thumbnail-title">Timelapse Story Telling</div>
+                  <div class="thumbnail-description">Visualization exploring landscape changes along Taiwan's coastline over two decades using Timemachine.</div>
+                </div>
+              </a>
+            </td>
+          </tr>
+        </table>
       </div>
-      <div id="footer" class="create-lab-font">
+      <div id="footer">
         <a href="http://www.ri.cmu.edu/">The Robotics Institute</a>&nbsp;|
         <a href="http://www.cmu.edu">Carnegie Mellon University</a>&nbsp;|
         <a href="mailto:info@cmucreatelab.org">info@cmucreatelab.org</a>&nbsp;|
