--- a/explorables/eva-and-lehd.html
+++ b/explorables/eva-and-lehd.html
@@ -23,13 +23,13 @@
       </div>
       <div id="body">
         <div id="embed">
-          <iframe src="//player.vimeo.com/hubnut/album/2760915?color=44bbff&amp;background=000000&amp;slideshow=1&amp;video_title=1&amp;video_byline=1" width="500" height="270" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe src="//player.vimeo.com/hubnut/album/2760915?color=44bbff&amp;background=000000&amp;slideshow=1&amp;video_title=1&amp;video_byline=1" width="520" height="330" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>
         <div id="embed-description">
-            <strong>EVA & LEHD</strong>
-            <p>
-            This tool is focused around visualizing massive and high dimensional datasets. As an example, a sample of workforce census data has been preloaded in the system. The user can assign various dimensions of data to 5 available spatio-temporal visual dimensions and then interact with the data. The goal is to provide a tool suitable for visualizing and understanding large datasets. These stories demonstrate using EVA to explore and visualize the data from LEHD.
-          </p>
+            <h3>EVA & LEHD</h3>
+            <p class="content-text">
+              This tool is focused around visualizing massive and high dimensional datasets. As an example, a sample of workforce census data has been preloaded in the system. The user can assign various dimensions of data to 5 available spatio-temporal visual dimensions and then interact with the data. The goal is to provide a tool suitable for visualizing and understanding large datasets. These stories demonstrate using EVA to explore and visualize the data from LEHD.
+            </p>
           <ul>
             <li><a href="http://eva.cmucreatelab.org" target="_blank">Explore it yourself</a></li>
           </ul>
