--- a/explorables/firms-timelapse.html
+++ b/explorables/firms-timelapse.html
@@ -23,13 +23,13 @@
       </div>
       <div id="body">
         <div id="embed">
-          <iframe src="//player.vimeo.com/video/88102327" width="500" height="353" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/88102327">Fires in Madagascar</a> from <a href="http://vimeo.com/user4107587">CREATE Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+          <iframe src="//player.vimeo.com/video/88102327" width="520" height="330" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/88102327">Fires in Madagascar</a> from <a href="http://vimeo.com/user4107587">CREATE Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </div>
         <div id="embed-description">
-            <strong>FIRMS Timelapse</strong>
-            <p>
-              We visualized 53,087,291 fire events as recorded over almost 13 years by MODIS. This particular story digs into how the visualization can be used to understand more about the use of fire in agricultural practices on Madagascar.
-            </p>
+          <h3>FIRMS Timelapse</h3>
+          <p class="content-text">
+            We visualized 53,087,291 fire events as recorded over almost 13 years by MODIS. This particular story digs into how the visualization can be used to understand more about the use of fire in agricultural practices on Madagascar.
+          </p>
           <ul>
             <li><a href="http://gabrielo.cmucreatelab.org/firms-lance-modis/timemachine.html" target="_blank">Explore it yourself</a></li>
           </ul>
