--- a/explorables/speck-air-quality-test.html
+++ b/explorables/speck-air-quality-test.html
@@ -23,11 +23,11 @@
       </div>
       <div id="body">
         <div id="embed">
-          <iframe src="//player.vimeo.com/video/85833543" width="500" height="304" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/85833543">Speck 12x12 Test</a> from <a href="http://vimeo.com/user4107587">CREATE Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+          <iframe src="//player.vimeo.com/video/85833543" width="520" height="330" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/85833543">Speck 12x12 Test</a> from <a href="http://vimeo.com/user4107587">CREATE Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </div>
         <div id="embed-description">
-            <strong>Speck Air Quality Test</strong>
-            <p>
+            <h3>Speck Air Quality Test</h3>
+            <p class="content-text">
               We arranged 144 Specks in a 12 x 12 grid
               to test how particles flow through the room. The Specks
               recorded samples once per second. The colored cells on the grid represent the values recorded. We also took periodic
