--- a/explorables/suburban-sprawl.html
+++ b/explorables/suburban-sprawl.html
@@ -23,13 +23,13 @@
       </div>
       <div id="body">
         <div id="embed">
-          <iframe src="//player.vimeo.com/video/88104209" width="500" height="270" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/88104209">Suburban Sprawl</a> from <a href="http://vimeo.com/user4107587">CREATE Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+          <iframe src="//player.vimeo.com/video/88104209" width="520" height="330" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/88104209">Suburban Sprawl</a> from <a href="http://vimeo.com/user4107587">CREATE Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </div>
         <div id="embed-description">
-            <strong>Suburban Sprawl</strong>
-            <p>
-              This video depicts the effect of suburban sprawl near my home in Chesterfield County, Virginia.  Though I did not notice the speed at which the development occurred while I lived there, when I left for college I began to realize every time I returned for the holidays that my hometown was never the same as how I left it.
-            </p>
+          <h3>Suburban Sprawl</h3>
+          <p class="content-text">
+            This video depicts the effect of suburban sprawl near my home in Chesterfield County, Virginia.  Though I did not notice the speed at which the development occurred while I lived there, when I left for college I began to realize every time I returned for the holidays that my hometown was never the same as how I left it.
+          </p>
         </div>
       </div>
       <div id="footer">
