--- a/explorables/fracking-earthquakes.html
+++ b/explorables/fracking-earthquakes.html
@@ -23,11 +23,11 @@
       </div>
       <div id="body">
         <div id="embed">
-          <iframe src="//player.vimeo.com/video/88174184" width="500" height="375" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/88174184">Fracking Earthquakes</a> from <a href="http://vimeo.com/user4107587">CREATE Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+          <iframe src="//player.vimeo.com/video/88174184" width="520" height="330" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/88174184">Fracking Earthquakes</a> from <a href="http://vimeo.com/user4107587">CREATE Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </div>
         <div id="embed-description">
-          <strong>Fracking Earthquakes</strong>
-          <p>
+          <h3>Fracking Earthquakes</h3>
+          <p class="content-text">
             This visualization explores the link between natural gas extraction and the Guy-Greenbrier earthquake swarm. The LANDSAT timelapse footage covers the time period between 1984-2012 ans show's how the number of wells in the region increases greatly while also capturing the onset of the earthquakes in 2010.
           </p>
           <ul>
