Added timelapse story telling and tweaked the UI.

--- a/explorables/template.html
+++ b/explorables/template.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>EXPLORABLE TITLE GOES HERE</title>
-    <link href="css/main.css" media="screen" rel="stylesheet" type="text/css"/>
+    <link href="../css/main.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <div id="container">
@@ -14,7 +14,7 @@
             </a>
           </div>
           <div class="create-lab-font">
-            <a href="./">
+            <a href="../">
               <div class="title-text">CREATE Lab</div>
               <div class="subtitle-text">Explorables</div>
             </a>
