--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </a>
             </td>
             <td class="thumbnail">
-              <a href="template.html">
+              <a href="explorables/template.html">
                 <div>
                   <img class="thumbnail-image" src="img/airnow@2x.png" width="225">
                   <div class="thumbnail-title">AirNow</div>
@@ -70,7 +70,7 @@
           </tr>
           <tr>
             <td class="thumbnail">
-              <a href="template.html">
+              <a href="explorables/template.html">
                 <div>
                   <img class="thumbnail-image" src="img/drilling@2x.png" width="225">
                   <div class="thumbnail-title">Drilling</div>
@@ -98,7 +98,7 @@
               </a>
             </td>
             <td class="thumbnail">
-              <a href="http://earthtimelapsestorytelling.blogspot.com/" target="_blank">
+              <a href="explorables/timelapse-story-telling.html">
                 <div>
                   <img class="thumbnail-image" src="img/yenchia@2x.png" width="225">
                   <div class="thumbnail-title">Timelapse Story Telling</div>
