edited home page description

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p id="site-description">
           The Community Robotics, Education and Technology Empowerment Lab
           (<a href="http://www.cmucreatelab.org/">CREATE Lab</a>)<br>
-          explores socially meaningful innovation and deployment of robotic technologies. We specifically<br>
+          explores socially meaningful innovation and deployment of robotic technologies. We
           aim to empower a technologically fluent generation and empower everyday citizens and scientists.
         </p>
       </div>
