--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           The Community Robotics, Education and Technology Empowerment Lab
           (<a href="http://www.cmucreatelab.org/">CREATE Lab</a>)<br>
           explores socially meaningful innovation and deployment of robotic technologies. We
-          aim to empower a technologically fluent generation and empower everyday citizens and scientists.
+          aim to empower a technologically fluent generation of people and empower everyday citizens and scientists.
         </p>
       </div>
       <div id="body">
