Improved the user experience for timelapse-story-telling.html

--- a/explorables/timelapse-story-telling.html
+++ b/explorables/timelapse-story-telling.html
@@ -4,6 +4,96 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-16">
     <title>Timelapse Story Telling</title>
     <link href="../css/main.css" media="screen" rel="stylesheet" type="text/css"/>
+    <script src="../js/jquery/jquery.min.js" type="text/javascript"></script>
+    <script src="../js/postmessage.js" type="text/javascript"></script>
+    <script>
+      var lastScrollTop = 0;
+      var enableIframeRequest = true;
+      var p1 = {
+        "Taimali_River": 230,
+        "Heping_Power_Plant": 680,
+        "Taipei_Harbor": 1150,
+        "Datan_Power_Plant": 1590
+      };
+      var p2 = {
+        "Taimali_River": 345,
+        "Heping_Power_Plant": 793,
+        "Taipei_Harbor": 1254,
+        "Datan_Power_Plant": 1698
+      };
+      var pScrollTo = {
+        "Taimali_River": 325,
+        "Heping_Power_Plant": 773,
+        "Taipei_Harbor": 1234,
+        "Datan_Power_Plant": 1678
+      };
+      // Handles the sending of cross-domain iframe requests.
+      function post(type, data) {
+        pm({
+          target: window.frames["time_machine_iframe"],
+          type: type,
+          data: data,
+          url: "http://yenchiah.cmucreatelab.org/timemachine-viewer-demo/tests/landsat.html",
+          origin: "http://yenchiah.cmucreatelab.org"
+        });
+      }
+      function init() {
+        // Handles the cross-domain iframe request when a slide in the iframe is clicked
+        pm.bind("from-timemachine-slide-changed", function(slideTitle) {
+          console.log("Iframe slide changed:", slideTitle);
+          slideTitle = slideTitle.split(' ').join('_');
+          $(document.body).animate({
+            scrollTop: pScrollTo[slideTitle]
+          }, {
+            duration: 1000,
+            start: function() {
+              enableIframeRequest = false;
+            },
+            done: function() {
+              enableIframeRequest = true;
+            }
+          });
+        });
+        $(window).scroll(function(event) {
+          var currentScrollTop = $(event.currentTarget).scrollTop();
+          //console.log(currentScrollTop);
+          if(enableIframeRequest) {
+            // Scroll down
+            if (lastScrollTop < p1.Taimali_River && currentScrollTop >= p1.Taimali_River)
+              post("timemachine-goto-presentation-slide", "Taimali River");
+            else if (lastScrollTop < p1.Heping_Power_Plant && currentScrollTop >= p1.Heping_Power_Plant)
+              post("timemachine-goto-presentation-slide", "Heping Power Plant");
+            else if (lastScrollTop < p1.Taipei_Harbor && currentScrollTop >= p1.Taipei_Harbor)
+              post("timemachine-goto-presentation-slide", "Taipei Harbor");
+            else if (lastScrollTop < p1.Datan_Power_Plant && currentScrollTop >= p1.Datan_Power_Plant)
+              post("timemachine-goto-presentation-slide", "Datan Power Plant");
+            // Scroll up
+            if (lastScrollTop > p2.Taimali_River && currentScrollTop <= p2.Taimali_River)
+              post("timemachine-goto-presentation-slide", "Taimali River");
+            else if (lastScrollTop > p2.Heping_Power_Plant && currentScrollTop <= p2.Heping_Power_Plant)
+              post("timemachine-goto-presentation-slide", "Heping Power Plant");
+            else if (lastScrollTop > p2.Taipei_Harbor && currentScrollTop <= p2.Taipei_Harbor)
+              post("timemachine-goto-presentation-slide", "Taipei Harbor");
+          }
+          lastScrollTop = currentScrollTop;
+        });
+        // Scroll the page to the top when initially loaded
+        setTimeout(function() {
+          $(document.body).animate({
+            scrollTop: 0
+          },  {
+            duration: 1000,
+            start: function() {
+              enableIframeRequest = false;
+            },
+            done: function() {
+              enableIframeRequest = true;
+            }
+          });
+        }, 200);
+      }
+      $(init);
+    </script>
   </head>
   <body>
     <div id="container">
@@ -24,7 +114,7 @@
       </div>
       <div id="body" style="margin-top:5px;">
         <div id="embed-fixed" style="position:fixed;">
-          <iframe width="942" height="495" src="http://yenchiah.cmucreatelab.org/timemachine-viewer-demo/examples/landsat.html#presentation=EJDkDahRXiWQ7t5hBTyphoon%20Morakot%20on%20August%202009%20brought%20extreme%20amount%20of%20rain%20and%20caused%20river%20bank%20collapse%20on%20the%20mouth%20area%2E_Taimali%20River_DkDctb4iFdCu5hBA%20coal-fired%20power%20plant%20in%20a%20cement%20industrial%20park%20used%20to%20support%20the%20massive%20power%20needed%20for%20cement%20production%2E_Heping%20Power%20Plant_DkDa7PJjHK_t5hBTaipei%20Harbor%20is%20an%20artificial%20harbor%20built%20by%20land%20reclamation%20and%20mainly%20used%20for%20operations%20of%20large%20container%20ships%2E_Taipei%20Harbor_DkDUP_Gj937t5hBA%20gas-fired%20combined-cycle%20thermal%20power%20plant%2E%20It%20emits%20less%20carbon%20dioxide%20and%20thus%20is%20more%20environmental%20friendly%2E_Datan%20Power%20Plant_DkDYMp3igp2t5hB_Taichung%20Power%20Plant_DkDSeu0ifl1t5hB_Zhangbin%20Industrial_DkDZzyuijjzt5hB_Naphtha%20Cracking_DkDUZ1eiiOzt5hB_Anping%20Harbor_BAXtCWiQ80t5hB_Kaohsiung%20Harbor_Taiwan%20Coast%20Line_B&v=23.69127,121.23223,5.186,latLng&t=2.60" frameborder="0"></iframe>
+          <iframe name="time_machine_iframe" id="time_machine_iframe" width="942" height="495" src="http://yenchiah.cmucreatelab.org/timemachine-viewer-demo/tests/landsat.html#presentation=EJDkDahRXiWQ7t5hBTyphoon%20Morakot%20on%20August%202009%20brought%20extreme%20amount%20of%20rain%20and%20caused%20river%20bank%20collapse%20on%20the%20mouth%20area%2E_Taimali%20River_DkDctb4iFdCu5hBA%20coal-fired%20power%20plant%20in%20a%20cement%20industrial%20park%20used%20to%20support%20the%20massive%20power%20needed%20for%20cement%20production%2E_Heping%20Power%20Plant_DkDa7PJjHK_t5hBTaipei%20Harbor%20is%20an%20artificial%20harbor%20built%20by%20land%20reclamation%20and%20mainly%20used%20for%20operations%20of%20large%20container%20ships%2E_Taipei%20Harbor_DkDUP_Gj937t5hBA%20gas-fired%20combined-cycle%20thermal%20power%20plant%2E%20It%20emits%20less%20carbon%20dioxide%20and%20thus%20is%20more%20environmental%20friendly%2E_Datan%20Power%20Plant_DkDYMp3igp2t5hB_Taichung%20Power%20Plant_DkDSeu0ifl1t5hB_Zhangbin%20Industrial_DkDZzyuijjzt5hB_Naphtha%20Cracking_DkDUZ1eiiOzt5hB_Anping%20Harbor_BAXtCWiQ80t5hB_Kaohsiung%20Harbor_Taiwan%20Coast%20Line_B&v=23.69127,121.23223,5.186,latLng&t=2.60" frameborder="0"></iframe>
         </div>
         <div id="embed-description-scroll">
           <h2>Landscape Changes Along Taiwan's Coastline in Two Decades</h2>
